--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ button.search:hover {
     border-radius: 5px;
 }
 
+.ad-box {
+    background-color: rgb(201, 201, 201);
+    height: 200px;
+    width: 100%;
+    display: block;
+}
+
 .news-box {
     width: 100%;
     display: block;
