--- a/style.css
+++ b/style.css
@@ -31,15 +31,12 @@ button.search:hover {
 }
 
 ::-webkit-scrollbar {
-    background: rgb(26, 26, 26);
+    background: rgb(238, 238, 238);
     width: 10px;
 }
 
  ::-webkit-scrollbar-thumb {
-    background: #ffb400;
-    /* border-top-left-radius: 5px;
-    border-bottom-right-radius: 5px; */
-    border-radius: 5px;
+    background: #494949;
 }
 
 .ad-box {
@@ -115,6 +112,30 @@ button.search:hover {
 .cat-title i {
     color: red;
     font-size: 17px;
+}
+
+.section-video {
+    background-color: rgb(36, 36, 36);
+}
+
+.section-video .cat-title {
+    color: rgb(250, 250, 250);
+}
+
+.section-video .video {
+    background-color: black;
+    height: 200px;
+    display: block;
+}
+
+.section-video .videoone {
+    background-color: black;
+    height: 400px;
+    display: block;
+}
+
+.nav-tabs .nav-link {
+    font-weight: 700;
 }
 
 @media only screen and (min-width: 968px) {
