--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ a {
 a:hover {
     color: #222;
     text-decoration: none;
-    text-shadow: -3px 0px 6px rgb(209, 209, 209);
 }
 
 .main-logo {
@@ -332,4 +331,24 @@ button.search:hover {
 .copyright {
     font-size: 15px;
     font-weight: 600;
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-link.active:focus {
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #ffffff;
+    background: #1c4a7b;
+    border-radius: 0px;
+}
+
+.nav-tabs .nav-item {
+    text-align: center;
+    width: 50%;
+}
+
+.category .news-box {
+    background-color: #f7f7f7;
+    padding: 10px;
 }
